--- a/deployment/templates/deployment/request_dog_list.html
+++ b/deployment/templates/deployment/request_dog_list.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class = "ui segment">
-<table id="tabledata" class="ui celled table">
+<table id="tabledata" class="ui small celled table">
         <thead>
             <tr>
                 <th>Start date</th>
