--- a/profiles/templates/profiles/global-base-ui/sidebar_menu.html
+++ b/profiles/templates/profiles/global-base-ui/sidebar_menu.html
@@ -23,6 +23,7 @@
             <a class="item" href="{% url 'training:adoption_list'%}"><i class="handshake icon"></i>Adoption</a>
 
             {% elif request.session.session_user_position == "Team Leader" %}
+             <a class="item" href="{% url 'profiles:team_leader_dashboard'%}"><i class="chart line icon"></i>Homepage</a>
             <a class="item" href="{% url 'profiles:user_list'%}"><i class="folder open icon"></i>Unit Management</a>
             
             {% elif request.session.session_user_position == "Handler"%}
