fixed bugs (mostly initial deployment)

--- a/profiles/templates/profiles/sidebar_deployment.html
+++ b/profiles/templates/profiles/sidebar_deployment.html
@@ -26,11 +26,11 @@
                         <a href="{% url 'deployment:view_incidents'%}" class="item">
                             <i class="clipboard list icon"></i>Incident List
                         </a>
-                         <a href="{% url 'deployment:choose_location'%}" class="item">
-                            <i class="clipboard list icon"></i>Schedule Deployment
-                        </a>
+                         <!--<a href="{% url 'deployment:choose_location'%}" class="item">-->
+                            <!--<i class="clipboard list icon"></i>Schedule Deployment (beta)-->
+                        <!--</a>-->
                         <a href="{% url 'deployment:schedule_units'%}" class="item">
-                            <i class="clipboard list icon"></i>Schedule Deployment ver. 2.0
+                            <i class="clipboard list icon"></i>Schedule Deployment
                         </a>
                     </div>
             </div>
