--- a/profiles/templates/profiles/dashboard.html
+++ b/profiles/templates/profiles/dashboard.html
@@ -13,8 +13,10 @@
                             <div class="ui raised center aligned segment">
                                 <div class="card">
                                     <div class="content">
-                                        <i class="huge user purple icon"></i>
-                                        <i class="huge paw purple icon">{{c_count}}</i>
+                                        <i class="large user purple icon"></i>
+                                        <i class="large paw purple icon"></i>
+                                        <i class="huge purple icon">{{c_count}}</i>
+                                        
                                     </div>
                                     <div class="extra content">
                                         <strong>
@@ -28,7 +30,8 @@
                             <div class="ui raised center aligned segment">
                                 <div class="card">
                                     <div class="content">
-                                        <i class="huge shopping basket olive icon">{{item_req_count}}</i>
+                                        <i class="large shopping basket olive icon"></i>
+                                        <i class="huge olive icon">{{item_req_count}}</i>
                                     </div>
                                     <div class="extra content">
                                       <br>
@@ -44,8 +47,9 @@
                             <div class="ui raised center aligned segment">
                                 <div class="card">
                                     <div class="content">
-                                        <i class="huge question black icon"></i>
-                                        <i class="huge paw black icon">{{up_count}}</i>
+                                        <i class="large question black icon"></i>
+                                        <i class="large paw black icon"></i>
+                                        <i class="huge black icon">{{up_count}}</i>
                                     </div>
                                     <div class="extra content">
                                         <br>
