--- a/unitmanagement/templates/unitmanagement/transfer_data.html
+++ b/unitmanagement/templates/unitmanagement/transfer_data.html
@@ -27,7 +27,7 @@
                         </tr>
                         <tr>
                             <th>Mobile</th>
-                            <td>{{transfer.handler.mobile}}</td>
+                            <td>{{personal.mobile_number}}</td>
                             <th>Capability</th>
                             <td>{{k9.capability}}</td>
                         </tr>
