--- a/profiles/templates/profiles/trainer_dashboard.html
+++ b/profiles/templates/profiles/trainer_dashboard.html
@@ -13,8 +13,8 @@
                           <div class="value">
                             <i class="tags icon"></i> {{unclassified}}
                           </div><br>
-                          <a class="label" href="{% url 'training:classify_k9_list'%}">
-                            Unclassified K9's
+                          <a href="{% url 'training:classify_k9_list'%}?type=unclassified">
+                            UNCLASSIFIED K9's
                           </a>
                         </div>
                   </div>
@@ -25,8 +25,8 @@
                             <div class="value">
                               <i class="pencil alternate icon"></i> {{grade}}
                             </div><br>
-                            <a class="label" href="{% url 'training:classify_k9_list'%}">
-                              For Grading
+                            <a href="{% url 'training:classify_k9_list'%}?type=grading">
+                              FOR-GRADING
                             </a>
                           </div>
                     </div>
