--- a/unitmanagement/templates/unitmanagement/trained_list.html
+++ b/unitmanagement/templates/unitmanagement/trained_list.html
@@ -238,7 +238,7 @@
 
     $(document).ready(function() {
         $('#tabledata1').DataTable({
-         "order": [[ 4, "desc" ]]
+         "order": [[ 4, "asc" ]]
          });
         $('.menu .item').tab();
 
