--- a/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
@@ -164,9 +164,7 @@
                          </thead>
                  
                          <tbody>
-                             {% for m, s, b in mlist %}
-     
-                             {% if m.estrus_date >= today.date %}
+                             {% for m, s, b in hlist %}
                              <tr class="positive">
                                  <td class="center aligned"> 
                                      <input type="radio" id="radiom" name="radiom" value="{{m.id}}">
@@ -185,6 +183,27 @@
                                     <a href="#" class="btn_modal" data-name='{{f}}' id='{{m.id}}'>Mate Today!</a> 
                                 </td>
                              </tr>
+                             {% endfor %}
+                             {% for m, s, b in mlist %}
+                             {% if m.last_estrus_date > today.date %}
+                             <tr class="positive">
+                                 <td class="center aligned"> 
+                                     <input type="radio" id="radiom" name="radiom" value="{{m.id}}">
+                                 </td>
+                                 <td>
+                                     <a href="#" class="show_modal" id='{{m.id}}'
+                                     style="color:green;">{{m.name}}</a>
+                                 </td>
+                                 <td>{{m.age}}</td>
+                                 <td>{{m.breed}}</td>
+                                 <td>{{m.capability}}</td>
+                                 <td>{{b}}%</td>
+                                 <td>{{m.litter_no}}</td>
+                                 <td>{{s}}</td>
+                                 <td>
+                                    <a href="#" class="btn_modal" data-name='{{f}}' id='{{m.id}}'>{{m.last_proestrus_date|date:'Y/m/d'}}</a> 
+                                </td>
+                             </tr>
                              {% else %}
                              <tr>
                                  <td class="center aligned"> 
@@ -201,7 +220,7 @@
                                  <td>{{m.litter_no}}</td>
                                  <td>{{s}}</td>
                                  <td>
-                                    <a href="#" id='{{m.id}}' data-name='{{m}}' class="btn_modal" style="color:powderblue;">{{m.last_proestrus_date|date:'m/d/Y'}}</a> 
+                                    <a href="#" id='{{m.id}}' data-name='{{m}}' class="btn_modal" style="color:powderblue;">{{m.last_proestrus_date|date:'Y/m/d'}}</a> 
                                   </td>
                              </tr>
                              {% endif %}
@@ -226,11 +245,10 @@
   <div class="ui bottom attached tab segment" data-tab="second">
       <div class="ui two column grid">
         <div class="column">
-            <center>
-              <h4 class='ui horizontal divider header'>Dam (Mother)</h4>
-            </center>
-
-            <table id="tabledata2" class="ui seven column inverted pink celled collapsing small table">
+                <center>
+                <h4 class='ui horizontal divider header'>Mother (Dam)</h4>
+                </center>
+            <table id="tabledata5" class="ui eight column inverted pink celled collapsing small table">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -243,7 +261,7 @@
                         <th>In-Heat Date</th>
                     </tr>
                 </thead>
-  
+
                 <tbody>
                     {% for f, s, b in mmlist %}
                     <tr>
@@ -258,19 +276,19 @@
                         <td>{{s}}</td>
                         <td>
                             <a href="#" id='{{f.id}}' data-name='{{f}}' class="btn_modal"
-                            style="color:powderblue;">{{f.last_proestrus_date|date:'m/d/Y'}}</a>
+                            style="color:powderblue;">{{f.last_proestrus_date|date:'Y/m/d'}}</a>
                         </td>
                     </tr>
                     {% endfor %}
                 </tbody>
-              </table>
+            </table>
+
         </div>
         <div class="column">
             <center>
               <h4 class='ui horizontal divider header'>Sire (Father)</h4>
             </center>
-            <table id="tabledata3" class="ui seven column inverted blue celled
-            collapsing small table">
+            <table id="tabledata6" class="ui seven column inverted blue celled collapsing small table">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -345,12 +363,12 @@
     });
 
 	$('#tabledata1').DataTable({
-      "order": [[ 5, "desc" ],[ 6, "desc" ],[ 7, "asc" ]]
+      "order": [[ 8, "asc" ],[ 5, "desc" ],[ 6, "desc" ],[ 7, "asc" ]]
     });
-    $('#tabledata2').DataTable({
-      "order": [[ 4, "desc" ],[ 5, "desc" ],[ 6, "asc" ]]
+    $('#tabledata5').DataTable({
+      "order": [[ 7, "asc" ],[ 4, "desc" ],[ 5, "desc" ],[ 6, "asc" ]]
     });
-    $('#tabledata3').DataTable({
+    $('#tabledata6').DataTable({
       "order": [[ 4, "desc" ],[ 5, "desc" ],[ 6, "asc" ]]
     });
 
