--- a/profiles/templates/profiles/handler_dashboard.html
+++ b/profiles/templates/profiles/handler_dashboard.html
@@ -10,17 +10,48 @@
       <div class="ui grid" style="margin: 0%; padding: 0%;">
         <div class="two column row">
             <div class="nine wide column"  style="margin-right:0%;">
+                {%if cb %}
+                {%if cb.status == 'Pending' %}
+                <div class="ui info message">
+                   
+                    <div class="header">
+                      <i></i>
+                        YOU HAVE BEEN CALLED BACK TO BASE! 
+                        <a href="{% url 'unitmanagement:confirm_going_back' cb.id %}" class="ui orange small button">Confirm</a>
+                    </div>
+                    <ul class="list">
+                      <li>Please confirm that
+                          you have received the message and will return at your most earliest
+                          convenient time. </li>
+                    </ul>
+                  </div>
+                  {% else %}
+                  <div class="ui info icon message">
+                      <i class="exclamation icon"></i>
+                      <div class="content">
+                        <div class="header">
+                            Admin is awaiting your arrival back to base.
+                        </div>
+                      </div> 
+                  </div>
+                  {% endif %}
+                  {% endif %}
+
+            
                   <div class="ui three column grid">
                     <div class="column">
                         <div class="ui raised segment">
-                          <div class="ui statistic">
-                            <div class="value">
-                              <i class="green check icon"></i>
+                            <div class="card">
+                                <div class="content">
+                                    <i class="huge green check icon"></i>
+                                </div>
+                                <div class="extra content">
+                                    <strong>
+                                        <a href="">DAILY REFRESHER</a>
+                                    </strong>
+                                </div>
                             </div>
-                            <div class="label">
-                              Daily Refresher
-                            </div>
-                          </div>
+                          
                         </div>
                     </div>
                     <div class="column">
@@ -39,9 +70,9 @@
                         <div class="ui raised segment">
                             <div class="ui statistic">
                               <div class="value">
-                                <i class="plane icon"></i> 5
+                                <i class="ship icon"></i> 5
                               </div>
-                              <div class="label">
+                              <div class="label" style="font-size: 11px;">
                                 (Add info on port/request details)
                               </div>
                             </div>
@@ -114,7 +145,7 @@
                         {% endif %}
 
 
-
+                      
                   <div class="ui raised segment" >
                       <canvas id="myChart" height="355" ></canvas>
                   </div>
@@ -181,10 +212,6 @@
   background-color:orangered;
   color: white;
   }
-
-  <!--.fc-widget-header .fc-title{-->
-  <!--background-color: black-->
-  <!--}-->
 
 /* 
   #calendar {
